--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://MusoreJanvier.github.io/react_assignment",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -37,7 +38,6 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-time-picker": "^5.2.0",
-    "react-twilio-video": "^1.1.16",
     "recharts": "^2.12.3",
     "socket.io-client": "^4.7.5",
     "twilio-video": "^2.28.1",
@@ -46,6 +46,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -67,5 +69,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
